syntax = "proto3";

package userPackage;

service User {
  rpc GetUser(UserId) returns (UserResponse) {};
}

message UserId {
  string userId = 1;
}

message UserResponse {
  string username = 1;
  string job = 2;
}